--- a/X-Fortunes Racing.html
+++ b/X-Fortunes Racing.html
@@ -499,7 +499,7 @@
       <div class="start-line"></div>
       <div class="car jayden-car" id="car0">
         <div class="driver-info">
-          <div class="driver-name">JAYDoN</div>
+          <div class="driver-name">JAYDEN</div>
           <div class="driver-position">Position: 0%</div>
         </div>
       </div>
