--- a/X-Fortunes Racing.html
+++ b/X-Fortunes Racing.html
@@ -465,25 +465,25 @@
 
 <div class="background-image day"></div><!-- Небесный фон -->
 <div class="background-image night"></div><!-- Небесный фон -->
-<!-- <div> -->
-  <!-- <label for="driverSelect">Select driver: </label> -->
-  <!-- <select id="driverSelect" onchange="handleDriverChange()"> -->
-    <!-- <option value="0">JAYDEN</option> -->
-    <!-- <option value="1">SASHA</option> -->
-    <!-- <option value="2">CHRIS N</option> -->
-    <!-- <option value="3">GEORGE</option> -->
-    <!-- <option value="4">ADAM</option> -->
-    <!-- <option value="5">VICTOR</option> -->
-	<!-- <option value="6">BRIAN</option> -->
-	<!-- <option value="7">CONOR</option> -->
-	<!-- <option value="8">MAYA</option> -->
-	<!-- <option value="9">RYAN</option> -->
-	<!-- <option value="10">TOM</option> -->
-  <!-- </select> -->
-  <!-- <label for="amount">Enter your deposit: </label> -->
-  <!-- <input type="number" id="amount"> -->
-  <!-- <button onclick="moveCar()">Let's go faster!</button> -->
-<!-- </div> -->
+<div>
+  <label for="driverSelect">Select driver: </label>
+  <select id="driverSelect" onchange="handleDriverChange()">
+    <option value="0">JAYDEN</option>
+    <option value="1">SASHA</option>
+    <option value="2">CHRIS N</option>
+    <option value="3">GEORGE</option>
+    <option value="4">ADAM</option>
+    <option value="5">VICTOR</option>
+	<option value="6">BRIAN</option>
+	<option value="7">CONOR</option>
+	<option value="8">MAYA</option>
+	<option value="9">RYAN</option>
+	<option value="10">TOM</option>
+  </select>
+  <label for="amount">Enter your deposit: </label>
+  <input type="number" id="amount">
+  <button onclick="moveCar()">Let's go faster!</button>
+</div>
 <!-- Турнирная таблица -->
 <div id="tournament-table-container">
   <table id="tournament-table">
